--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "kuromoji": "^0.1.2",
     "mongoose": "^5.13.2",
     "multer": "^1.4.2",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "passport": "^0.4.1",
     "passport-google-oauth20": "^2.0.0",
